fixed scroll bug on user page and overlap on profile image

--- a/src/components/User-page.css
+++ b/src/components/User-page.css
@@ -18,17 +18,19 @@ img {
 #userPageHero {
   display: flex;
   justify-content: center;
+  margin-bottom: 30vh;
   background-color: white;
+  background-color: hsl(0, 0%, 21%);
+
 }
 
 .profileImage {
   display: flex;
   flex-direction: column;
   align-items: center;
-  position: absolute;
-  z-index: 2;
-  margin-bottom: 2vh;
-  margin-top: 13vh;
+  position: relative;
+  /* z-index: 2; */
+  background-color: hsl(0, 0%, 21%);
 }
 
 .profileImage{
@@ -36,14 +38,13 @@ img {
   justify-content: center;
 }
 
-#profileImage {
-  size: 2%;
-}
+
 
 #userBody {
   position: relative;
-  height: 75%;
+  height: 70%;
   background-color: hsl(0, 0%, 21%);
+  overflow: scroll;
 }
 
 #userInfo {
@@ -55,11 +56,10 @@ img {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  position: relative;
-  margin-top: 3vh;
+  margin-top: 1vh;
   margin-bottom: 0vh;
   background-color: white;
-  padding-top: 10vh;
+  /* padding-top: 10vh; */
 }
 
 #articles {
@@ -73,7 +73,6 @@ img {
 #comments {
 margin-right: 10%;
 }
-
 
 #comments:hover{
   background-color: transparent;
